# nauyaca

./: .bumpversion.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.toml  config.minimal.toml  docker-compose.yml  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: release-pypi.yml
contrib/: nauyaca.service
docs/: changelog.md  index.md  installation.md  quickstart.md
docs/explanation/: architecture.md  gemini-protocol.md  index.md  security-model.md
docs/gemini_protocol/: gemtext.txt
docs/how-to/: access-control.md  client-certificates.md  configure-server.md  deployment.md  hot-reload.md  index.md  logging.md  manage-certificates.md  rate-limiting.md  setup-tofu.md  titan-uploads.md
docs/reference/: cli.md  configuration.md  index.md  status-codes.md
docs/reference/api/: client.md  index.md  security.md  server.md
docs/tutorials/: building-a-client.md  index.md  securing-your-server.md  your-first-capsule.md
src/nauyaca/: __main__.py
src/nauyaca/client/: protocol.py  session.py
src/nauyaca/protocol/: __init__.py
src/nauyaca/security/: certificates.py  tofu.py
src/nauyaca/server/: config.py  handler.py  middleware.py  protocol.py  router.py  server.py
src/nauyaca/server/reload/: config.py  watcher.py
src/nauyaca/utils/: __init__.py  url.py
tests/: __init__.py  conftest.py
tests/capsule/: about.gmi  index.gmi
tests/capsule/gemlogs/: first.gmi
tests/test_cli/: test_cert_commands.py
tests/test_client/: test_protocol.py  test_protocol_properties.py  test_session.py  test_tofu_integration.py
tests/test_content/: __init__.py  test_gemtext.py  test_templates.py
tests/test_integration/: test_client_server.py  test_middleware_integration.py  test_pyopenssl_integration.py
tests/test_protocol/: __init__.py  test_constants.py  test_request.py  test_response.py  test_response_properties.py  test_status.py  test_status_properties.py
tests/test_security/: test_pyopenssl_tls.py  test_tofu_export_import.py
tests/test_server/: __init__.py  test_config.py  test_config_env.py  test_handler.py  test_middleware.py  test_protocol.py  test_proxy.py  test_router.py
tests/test_utils/: test_logging.py  test_url.py  test_url_properties.py
